--- a/frontend/src/common.css
+++ b/frontend/src/common.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-/* header */we
+/* header */
 header {position: sticky; top: 0; width: 100%; background-color: #fff;}
 .header-wrap {}
 .header-wrap .header-inner {display: flex; align-items: center; max-width: 1440px; margin: 0 auto; padding: 20px 50px;}
@@ -30,7 +30,7 @@ header {position: sticky; top: 0; width: 100%; background-color: #fff;}
 
 
 .header-wrap .header-inner .header__util-wrap .header__util-inner .header__util-hover {position: relative; padding-bottom: 13px; transform: translateY(7px);}
-.header-wrap .header-inner .header__util-wrap .header__util-inner .header__util-list {overflow: hidden; position: absolute; top: 100%; left: 50%; width: 150px; max-height: 0; padding: 0 20px; border: 1px solid #ddd; border-radius: 7px; background-color: #fff; box-shadow: 0px 5px 12px rgba(0, 0, 0, .05); box-sizing: border-box; opacity: 0; transform: translateX(-50%); transition: max-height .25s ease, opacity .2s ease; pointer-events: none;}
+.header-wrap .header-inner .header__util-wrap .header__util-inner .header__util-list {overflow: hidden; position: absolute; top: 100%; left: 50%; width: 150px; max-height: 0; padding: 0 20px; border: 1px solid #ddd; border-radius: 7px; background-color: #fff; box-shadow: 0px 5px 12px rgba(0, 0, 0, .05); box-sizing: border-box; opacity: 0; transform: translateX(-50%); transition: max-height .25s ease, opacity .2s ease; pointer-events: none; text-align: center;}
 
 .header-wrap .header-inner .header__util-wrap .header__util-inner .header__util-list li {padding: 10px 5px;}
 .header-wrap .header-inner .header__util-wrap .header__util-inner .header__util-list li:first-child {padding: 15px 5px 10px;}
@@ -158,4 +158,21 @@ footer {}
 
 @media screen and (max-width: 360px) {
     
+}
+
+/* top button */
+.top-btn {position: fixed; right: 50px; bottom: 40px; width: 40px; z-index: 999; opacity: 0; pointer-events: none; transition: opacity .3s ease;}
+.top-btn.is-show {opacity: 1; pointer-events: auto;}
+.top-btn img {width: 100%; height:100%;}
+
+@media screen and (max-width: 1250px) {
+    .top-btn{ right: 45px; bottom: 35px; width: 35px;}
+}
+
+@media screen and (max-width: 1024px) {
+    .top-btn {right: 40px; bottom: 30px; width: 30px;}
+}
+
+@media only screen and (max-width:768px) {
+    .top-btn {right: 25px; bottom: 25px;}
 }
